--- a/index.html
+++ b/index.html
@@ -23,6 +23,39 @@
        <a href="#" class="button">ver projetos</a>
     </div>
 </section>
+
+<section id="section-projects">
+    <h2>Projetos</h2>
+    <ul>
+        <li>
+            <div class="card-image"><img src="./assets/images/projeto1.jpg" alt=""></div>
+            <div class="card-info">
+                <h3>FiapFilmes</h3>
+                <h4>HTML, CSS, JS</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="" class="button">saiba mais</a>
+            </div>
+        </li>
+        <li>
+            <div class="card-image"><img src="/.assets/images/projeto2.jpg" alt=""></div>
+            <div class="card-info">
+                <h3></h3>
+                <h4></h4>
+                <p></p>
+                <a href=""></a>
+            </div>
+        </li>
+        <li>
+            <div class="card-image"><img src="" alt=""></div>
+            <div class="card-info">
+                <h3></h3>
+                <h4></h4>
+                <p></p>
+                <a href=""></a>
+            </div>
+        </li>
+    </ul>
+</section>
        
 </body>
 </html>
