--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
 </section>
 
 <section id="section-projects">
-    <h2>Projetos</h2>
+    <h3>Projetos</h3>
     <ul>
         <li>
             <div class="card-image"><img src="./assets/images/projeto1.jpg" alt=""></div>
             <div class="card-info">
-                <h3>FiapFilmes</h3>
-                <h4>HTML, CSS, JS</h4>
+                <h4>FiapFilmes</h4>
+                <h5>HTML, CSS, JS</h5>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <a href="" class="button">saiba mais</a>
             </div>
         </li>
         <li>
-            <div class="card-image"><img src="/.assets/images/projeto2.jpg" alt=""></div>
+            <div class="card-image"><img src="./assets/images/projeto2.jpg" alt=""></div>
             <div class="card-info">
-                <h3></h3>
-                <h4></h4>
+                <h4>Projeto 2</h4>
+                <h5></h5>
                 <p></p>
                 <a href=""></a>
             </div>
         </li>
         <li>
-            <div class="card-image"><img src="" alt=""></div>
+            <div class="card-image"><img src="./assets/images/projeto3.avif" alt=""></div>
             <div class="card-info">
-                <h3></h3>
-                <h4></h4>
+                <h4>Projeto 3</h4>
+                <h5></h5>
                 <p></p>
                 <a href=""></a>
             </div>
