--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </section>
 
 <section id="section-projects">
-    <h3>Projetos</h3>
+    <h2>Projetos</h2>
     <ul>
         <li>
             <div class="card-image"><img src="./assets/images/projeto1.jpg" alt=""></div>
             <div class="card-info">
-                <h4>FiapFilmes</h4>
-                <h5>HTML, CSS, JS</h5>
+                <h3>FiapFilmes</h3>
+                <h4>HTML, CSS, JS</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <a href="" class="button">saiba mais</a>
             </div>
@@ -39,8 +39,8 @@
         <li>
             <div class="card-image"><img src="./assets/images/projeto2.jpg" alt=""></div>
             <div class="card-info">
-                <h4>Projeto 2</h4>
-                <h5></h5>
+                <h3>Projeto 2</h3>
+                <h4></h4>
                 <p></p>
                 <a href=""></a>
             </div>
@@ -48,14 +48,35 @@
         <li>
             <div class="card-image"><img src="./assets/images/projeto3.avif" alt=""></div>
             <div class="card-info">
-                <h4>Projeto 3</h4>
-                <h5></h5>
+                <h3>Projeto 3</h3>
+                <h4></h4>
                 <p></p>
                 <a href=""></a>
             </div>
         </li>
     </ul>
 </section>
-       
+
+<section id="section-budget">
+    <form action="#">
+        <h4>Orçamento</h4>
+        <label for="qtde"> Qtde de paginas ? </label>
+        <input type="number" id="qtde" min="1" value="1">
+        <label for="js"> Precisa de JS ? </label>
+        <input type="checkbox" id="js">
+        <label for="layout"> Precisa de layout ? </label>
+        <div>
+            <input type="radio" id="layout-sim" name="layout">
+            <label for="layout-sim"> sim, preciso </label>
+            <input type="radio" id="layout-nao" name="layout">
+            <label for="layout-nao"> não, ja tenho </label>
+        </div>
+        <label for="prazo"> Prazo </label>
+        <input type="range" id="prazo" min="1" max="10">
+        <output id="preco"> R$ 100.00 </output>
+
+    </form>
+</section>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
