--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+   
+<nav>
+    <div id="hamburger">
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+    </div>
+
+    <ul id="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Apresentação</a></li>
+        <li><a href="#">Projetos</a></li>
+        <li><a href="#">Orçamento</a></li>
+    </ul>
+</nav>    
+
 <header>
     <h1>Estudante de Engenharia da Computação</h1>
     <span>Pedro Henrique Hernandes</span>
