--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
    
@@ -16,11 +17,22 @@
         <div class="linha"></div>
     </div>
 
-    <ul id="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Apresentação</a></li>
-        <li><a href="#">Projetos</a></li>
-        <li><a href="#">Orçamento</a></li>
+    <ul id="menu" class="menu-show">
+        <li><a href="#">
+            <i class="fa-solid fa-house"></i>
+            Home</a>
+        </li>
+        <li><a href="#">
+            <i class="fa-solid fa-user"></i>
+            Apresentação</a>
+        </li>
+        <li><a href="#">
+            <i class="fa-solid fa-code"></i>
+            Projetos</a>
+        </li>
+        <li><a href="#"><i class="fa-solid fa-wallet"></i>
+            Orçamento</a>
+        </li>
     </ul>
 </nav>    
 
@@ -93,5 +105,6 @@
     </form>
 </section>
 <script src="./assets/js/script.js"></script>
+<script src="./assets/js/menu.js"></script>
 </body>
 </html>
