--- a/index.html
+++ b/index.html
@@ -1,110 +1,126 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="./assets/js/loader.js"></script>   
 </head>
+
 <body>
-   
-<nav>
-    <div id="hamburger">
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
+
+    <div class="loader">
+        <div class="spiner"></div>
     </div>
 
-    <ul id="menu" class="menu-show">
-        <li><a href="#">
-            <i class="fa-solid fa-house"></i>
-            Home</a>
-        </li>
-        <li><a href="#">
-            <i class="fa-solid fa-user"></i>
-            Apresentação</a>
-        </li>
-        <li><a href="#">
-            <i class="fa-solid fa-code"></i>
-            Projetos</a>
-        </li>
-        <li><a href="#"><i class="fa-solid fa-wallet"></i>
-            Orçamento</a>
-        </li>
-    </ul>
-</nav>    
+    <main class="hide">
 
-<header>
-    <h1>Estudante de Engenharia da Computação</h1>
-    <span>Pedro Henrique Hernandes</span>
-    <a href="#" class="button">saiba mais</a>
-</header>
-
-<section class="section-presentation">
-    <img class="avatar" src="https://github.com/phhernandes.png" alt="foto Pedro Hernandes">
-   <div>
-       <h2>Cursando Engenharia da Computação desde 2021</h2>
-       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-       <a href="#" class="button">ver projetos</a>
-    </div>
-</section>
-
-<section id="section-projects">
-    <h2>Projetos</h2>
-    <ul>
-        <li>
-            <div class="card-image"><img src="./assets/images/projeto1.jpg" alt=""></div>
-            <div class="card-info">
-                <h3>FiapFilmes</h3>
-                <h4>HTML, CSS, JS</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="" class="button">saiba mais</a>
+        <nav>
+            <div id="hamburger">
+                <div class="linha"></div>
+                <div class="linha"></div>
+                <div class="linha"></div>
             </div>
-        </li>
-        <li>
-            <div class="card-image"><img src="./assets/images/projeto2.jpg" alt=""></div>
-            <div class="card-info">
-                <h3>Projeto 2</h3>
-                <h4></h4>
-                <p></p>
-                <a href=""></a>
-            </div>
-        </li>
-        <li>
-            <div class="card-image"><img src="./assets/images/projeto3.avif" alt=""></div>
-            <div class="card-info">
-                <h3>Projeto 3</h3>
-                <h4></h4>
-                <p></p>
-                <a href=""></a>
-            </div>
-        </li>
-    </ul>
-</section>
 
-<section id="section-budget">
-    <form action="#">
-        <h4>Orçamento</h4>
-        <label for="qtde"> Qtde de paginas ? </label>
-        <input type="number" id="qtde" min="1" value="1">
-        <label for="js"> Precisa de JS ? </label>
-        <input type="checkbox" id="js">
-        <label for="layout"> Precisa de layout ? </label>
-        <div>
-            <input type="radio" id="layout-sim" name="layout">
-            <label for="layout-sim"> sim, preciso </label>
-            <input type="radio" id="layout-nao" name="layout">
-            <label for="layout-nao"> não, ja tenho </label>
-        </div>
-        <label for="prazo"> Prazo </label>
-        <input type="range" id="prazo" min="1" max="10">
-        <output id="preco"> R$ 100.00 </output>
+            <ul id="menu" class="menu-show">
+                <li><a href="#">
+                        <i class="fa-solid fa-house"></i>
+                        Home</a>
+                </li>
+                <li><a href="#">
+                        <i class="fa-solid fa-user"></i>
+                        Apresentação</a>
+                </li>
+                <li><a href="#">
+                        <i class="fa-solid fa-code"></i>
+                        Projetos</a>
+                </li>
+                <li><a href="#"><i class="fa-solid fa-wallet"></i>
+                        Orçamento</a>
+                </li>
+            </ul>
+        </nav>
 
-    </form>
-</section>
-<script src="./assets/js/script.js"></script>
-<script src="./assets/js/menu.js"></script>
+        <header>
+            <h1>Estudante de Engenharia da Computação</h1>
+            <span>Pedro Henrique Hernandes</span>
+            <a href="#" class="button">saiba mais</a>
+        </header>
+
+        <section class="section-presentation">
+            <img class="avatar large-only" src="https://github.com/phhernandes.png" alt="foto Pedro Hernandes">
+            <div>
+                <h2>Cursando Engenharia da Computação desde 2021</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.</p>
+                <a href="#" class="button">ver projetos</a>
+            </div>
+        </section>
+
+        <section id="section-projects">
+            <h2>Projetos</h2>
+            <ul>
+                <li>
+                    <div class="card-image"><img src="./assets/images/projeto1.jpg" alt=""></div>
+                    <div class="card-info">
+                        <h3>FiapFilmes</h3>
+                        <h4>HTML, CSS, JS</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <a href="" class="button">saiba mais</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="card-image"><img src="./assets/images/projeto2.jpg" alt=""></div>
+                    <div class="card-info">
+                        <h3>Projeto 2</h3>
+                        <h4></h4>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+                </li>
+                <li>
+                    <div class="card-image"><img src="./assets/images/projeto3.avif" alt=""></div>
+                    <div class="card-info">
+                        <h3>Projeto 3</h3>
+                        <h4></h4>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section id="section-budget">
+            <form action="#">
+                <h4>Orçamento</h4>
+                <label for="qtde"> Qtde de paginas ? </label>
+                <input type="number" id="qtde" min="1" value="1">
+                <label for="js"> Precisa de JS ? </label>
+                <input type="checkbox" id="js">
+                <label for="layout"> Precisa de layout ? </label>
+                <div>
+                    <input type="radio" id="layout-sim" name="layout">
+                    <label for="layout-sim"> sim, preciso </label>
+                    <input type="radio" id="layout-nao" name="layout">
+                    <label for="layout-nao"> não, ja tenho </label>
+                </div>
+                <label for="prazo"> Prazo </label>
+                <input type="range" id="prazo" min="1" max="10">
+                <output id="preco"> R$ 100.00 </output>
+
+            </form>
+        </section>
+        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/menu.js"></script>
+
+    </main>
 </body>
+
 </html>
